--- a/examples/example1.html
+++ b/examples/example1.html
@@ -5,27 +5,39 @@
     <script src="//opendatasoft.github.io/citysdk-opendatasoft/lib/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="//opendatasoft.github.io/citysdk-opendatasoft/lib/citysdk-Release1.2/js/citysdk.js"></script>
     <script src="//opendatasoft.github.io/citysdk-opendatasoft/lib/swagger-js-2.1.8/browser/swagger-client.js" type="text/javascript"></script>
-    <script src="//opendatasoft.github.io/citysdk-opendatasoft/lib/js/citysdk.opendatasoft.js" type="text/javascript"></script>
+    <script src="//opendatasoft.github.io/citysdk-opendatasoft/js/citysdk.opendatasoft.js" type="text/javascript"></script>
 
     <script>
         var sdk, ods;
 
         $(document).ready(function () {
             sdk = new CitySDK();
-            ods = sdk.modules.ods;
+            ods = sdk.modules.opendatasoft;
         });
 
         function submit() {
             var request = {}
 
+            var query, dataset, portal;
+
             $('#myform input').each(function (_, kv) {
-                if (kv.value != "" && kv.id != "" && kv.value.length > 0) {
-                    request[kv.id] = kv.value;
+                if (kv.id == "query") {
+                    query = kv.value;
+                }
+                if (kv.id == "dataset") {
+                    dataset = kv.value;
+                }
+                if (kv.id == "portal") {
+                    portal = kv.value;
                 }
             });
 
-            console.log("form : ");
-            console.log(request);
+            ods.enable(portal)
+
+            request["source"] = "catalog";
+            request["dataset_id"] = dataset;
+            request["q"] = query;
+            request["rows"] = 50;
 
             if (request.dataset_id) {
                 ods.get_source_datasets_dataset_id_records(request, function (response) {
@@ -73,19 +85,30 @@
 
         }
     </script>
+    <style type="text/css">
+        ul {
+            list-style-type: none;
+        }
+        ul li {
+            padding: 5px;
+        }
+        ul li input {
+            width: 200px;
+            margin-right: 5px;
+        }
+    </style>
 </head>
 <body>
 <div>
-    <h2>Datasets search example with CitySDK OpenDataSoft module.</h2>
+    <h2>Dataset search example with CitySDK OpenDataSoft module.</h2>
 
     <div id="myform">
-        <p>source: <input id="source" style="width: 100px;" value="catalog" type="text"/></p>
-        <p>q: <input id="q" style="width: 200px;" value="INSEE" type="text"/> (i.e. INSEE)</p>
-        <p>dataset: <input id="dataset_id" style="width: 200px;" value="" type="text"/> (i.e. &quot;categories-juridiques-insee&quot;)
-        </p>
-        <p>nb rows: <input id="rows" style="width: 20px;" value="5" type="integer"/> (i.e. 10)</p>
-        <p>sort: <input id="sort" style="width: 100px;" value="" type="text"/></p>
-        <input type="submit" onclick="submit()" value="Query"/>
+        <ul>
+            <li><input id="portal" name="portal" value="http://public.opendatasoft.com" type="text"/><label for="portal">OpenDataSoft Portal (e.g.: http://public.opendatasoft.com)</label></li>
+            <li><input id="dataset" name="dataset" value="" type="text"/><label for="dataset">Dataset identifier (e.g.: categories-juridiques-insee)</label></li>
+            <li><input id="query" name="query" value="INSEE" type="text"/><lael for="query">Query (e.g. INSEE)</li>
+            <li><input type="submit" onclick="submit()" value="Submit"/></li>
+        </ul>
     </div>
 </div>
 <pre id="output">
