--- a/examples/example1.html
+++ b/examples/example1.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>CitySDK ODS Module sammple</title>
-    <script src="//opendatasoft.github.io/citysdk-opendatasoft/lib/jquery-2.1.4.min.js" type="text/javascript"></script>
-    <script src="//opendatasoft.github.io/citysdk-opendatasoft/lib/citysdk-Release1.2/js/citysdk.js"></script>
-    <script src="//opendatasoft.github.io/citysdk-opendatasoft/lib/swagger-js-2.1.8/browser/swagger-client.js" type="text/javascript"></script>
-    <script src="//opendatasoft.github.io/citysdk-opendatasoft/js/citysdk.opendatasoft.js" type="text/javascript"></script>
+    <script src="http://opendatasoft.github.io/citysdk-opendatasoft/lib/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="http://opendatasoft.github.io/citysdk-opendatasoft/lib/citysdk-Release1.2/js/citysdk.js"></script>
+    <script src="http://opendatasoft.github.io/citysdk-opendatasoft/lib/swagger-js-2.1.8/browser/swagger-client.js" type="text/javascript"></script>
+    <script src="http://opendatasoft.github.io/citysdk-opendatasoft/js/citysdk.opendatasoft.js" type="text/javascript"></script>
 
     <script>
         var sdk, ods;
@@ -27,16 +27,15 @@
                 if (kv.id == "dataset") {
                     dataset = kv.value;
                 }
-                if (kv.id == "portal") {
-                    portal = kv.value;
-                }
             });
 
             ods.enable(portal)
 
             request["source"] = "catalog";
             request["dataset_id"] = dataset;
-            request["q"] = query;
+            if (query) {
+                request["q"] = query;
+            }
             request["rows"] = 50;
 
             if (request.dataset_id) {
@@ -99,18 +98,15 @@
     </style>
 </head>
 <body>
-<div>
     <h2>Dataset search example with CitySDK OpenDataSoft module.</h2>
 
     <div id="myform">
         <ul>
-            <li><input id="portal" name="portal" value="http://public.opendatasoft.com" type="text"/><label for="portal">OpenDataSoft Portal (e.g.: http://public.opendatasoft.com)</label></li>
             <li><input id="dataset" name="dataset" value="" type="text"/><label for="dataset">Dataset identifier (e.g.: categories-juridiques-insee)</label></li>
             <li><input id="query" name="query" value="INSEE" type="text"/><lael for="query">Query (e.g. INSEE)</li>
             <li><input type="submit" onclick="submit()" value="Submit"/></li>
         </ul>
     </div>
-</div>
 <pre id="output">
 </pre>
 <pre style="color:red" id="error">
