--- a/examples/example1.html
+++ b/examples/example1.html
@@ -54,7 +54,11 @@
                         }
                         output.append("<br/>");
                     });
+                    var error_tag = $('#error');
+                    error_tag.empty();
                 }, function(erreur){
+                    var output = $('#output');
+                    output.empty();
                     console.log(erreur);
                     var error_tag = $('#error');
                     error_tag.empty();
@@ -74,7 +78,11 @@
                         }
                         output.append("<br/>");
                     });
+                    var error_tag = $('#error');
+                    error_tag.empty();
                 }, function(erreur){
+                    var output = $('#output');
+                    output.empty();
                     var error_tag = $('#error');
                     error_tag.empty();
                     error_tag.append(erreur.obj.message);
